force-app/main/default/objects/ApplicationForm/ApplicationForm.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>