force-app/main/default/objects/ApplicationForm/fields/App_Amount__c.field-meta.xml
<CustomField>
    <fullName>App_Amount__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Loan Domain</complianceGroup>
    <description>Cumulative amount of AFP related to AF</description>
    <label>Application Amount</label>
    <summarizedField>ApplicationFormProduct.Amount__c</summarizedField>
    <summaryForeignKey>ApplicationFormProduct.ApplicationFormId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>