force-app/main/default/objects/ApplicationForm/fields/Application_Amount__c.field-meta.xml
<CustomField>
    <fullName>Application_Amount__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Loan Domain</complianceGroup>
    <description>Amount on the Application</description>
    <label>Application Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>