force-app/main/default/objects/ApplicationForm/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>External Id of the loan application</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Application Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>