force-app/main/default/objects/ApplicationForm/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Status of the loan application in AMBIT , CLP, BBD</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Application Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>