force-app/main/default/objects/ApplicationForm/fields/Assisted_Broker__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Broker__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset Finance Broker OCV Party linked to the application sourced from Broker Biz</description>
    <label>Assisted Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Application Forms</relationshipLabel>
    <relationshipName>Application_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>