force-app/main/default/objects/ApplicationForm/fields/Assisted_Broker_TPMI_SAO__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Broker_TPMI_SAO__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CSP</complianceGroup>
    <description>Assisted Broker TPMI-SAO</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assisted Broker TPMI SAO</label>
    <length>19</length>
    <type>Text</type>
</CustomField>