force-app/main/default/objects/ApplicationForm/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source - CSP</complianceGroup>
    <description>Id of the CSP Application Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>