force-app/main/default/objects/ApplicationForm/fields/Source_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source_Salesforce</complianceGroup>
    <description>External Id for AF Opportunity (OpportunityId + BrokerContactId)</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Source System Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>