force-app/main/default/objects/ApplicationForm/recordTypes/ACM.recordType-meta.xml
<RecordType>
    <fullName>ACM</fullName>
    <active>true</active>
    <label>ACM</label>
</RecordType>