force-app/main/default/objects/ApplicationForm/recordTypes/AMBIT.recordType-meta.xml
<RecordType>
    <fullName>AMBIT</fullName>
    <active>true</active>
    <label>AMBIT</label>
</RecordType>