force-app/main/default/objects/ApplicationForm/recordTypes/BBD.recordType-meta.xml
<RecordType>
    <fullName>BBD</fullName>
    <active>true</active>
    <label>BBD</label>
</RecordType>