force-app/main/default/objects/ApplicationForm/recordTypes/CLP.recordType-meta.xml
<RecordType>
    <fullName>CLP</fullName>
    <active>true</active>
    <label>CLP</label>
</RecordType>