force-app/main/default/objects/ApplicationForm/recordTypes/Internal_Application.recordType-meta.xml
<RecordType>
    <fullName>Internal_Application</fullName>
    <active>true</active>
    <label>Internal Application</label>
</RecordType>