force-app/main/default/objects/ApplicationForm/recordTypes/OCP.recordType-meta.xml
<RecordType>
    <fullName>OCP</fullName>
    <active>true</active>
    <label>OCP</label>
</RecordType>